--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,10 @@
- <!DOCTYPE html>
+...
+
+<p class="view"><a href="https://www.linkedin.com/in/marshallkesti/">Visit my Linkedin Profile</a></p>
+
+</header>
+...
+<!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
