--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
 <p class="view"><a href="https://www.linkedin.com/in/marshallkesti/">Visit my Linkedin Profile</a></p>
         
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ https://github.com/Marshall-Kesti }}">View my Github Profile <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ https://github.com/Marshall-Kesti }}">View my Github Profile</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ https://github.com/Marshall-Kesti }}">View My GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
