--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,10 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
 <p class="view"><a href="https://www.linkedin.com/in/marshallkesti/">Visit my Linkedin Profile</a></p>
+ 
+<p class="view"><a href="https://github.com/Marshall-Kesti">Visit my Github Profile</a></p>
         
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ https://github.com/Marshall-Kesti }}">View my Github Profile</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ https://github.com/Marshall-Kesti }}">View My GitHub Profile</a></p>
-        {% endif %}
+       
 
         {% if site.show_downloads %}
         <ul class="downloads">
