--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
  
 <p class="view"><a href="https://github.com/Marshall-Kesti">Visit my Github Profile</a></p>
         
+<p class="view"><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/59H66USJXEVS">View my Google Data Analytics Certificate</a></p>
+              
          {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
