--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
 <p class="view"><a href="https://www.linkedin.com/in/marshallkesti/">Visit my Linkedin Profile</a></p>
- 
-<p class="view"><a href="https://github.com/Marshall-Kesti">Visit my Github Profile</a></p>        
+
+<p class="view"><a href="https://github.com/Marshall-Kesti">Visit my Github Profile</a></p>   
+        
+<p class="view"><a href="https://public.tableau.com/app/profile/marshall.kesti">Visit my Tableau Public Profile</a></p>  
+        
 <p class="view"><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/59H66USJXEVS">View my Google Data Analytics Certificate</a></p>
               
          {% if site.show_downloads %}
