--- a/jekyll-theme-minimal.scss
+++ b/jekyll-theme-minimal.scss
@@ -10,7 +10,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#e3e2e1;
   margin:0 0 20px;
 }
 
@@ -27,32 +27,32 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  color:#e3e2e1;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+  color:#e3e2e1;
 }
 
 a {
-  color:#267CB9;
+  color:#e3e2e1;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#069;
+  color:#e3e2e1;
   font-weight: bold;
 }
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#e3e2e1;
   margin-top:-0.3em;
   display:block;
 }
 
 a:hover small {
-  color:#777;
+  color:#e3e2e1;
 }
 
 .wrapper {
