--- a/assets/style.scss
+++ b/assets/style.scss
@@ -2,3 +2,11 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+body {
+  background-color: #fff;
+  padding:50px;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#727272;
+  font-weight:400;
+}
